# Policies

./: .gitignore  .pre-commit-config.yaml  flake.nix  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  delete-deployment.yml  deploy.yml
docs/: admin.md  index.md  moderation.md
hooks/: config.py  copyright_year.py  slug_replacer.py
includes/: abbreviations.md
