[project]
name = "policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-git-committers-plugin==0.2.3",
    "mkdocs-git-revision-date-localized-plugin==1.4.6",
    "mkdocs-material[imaging]==9.6.14",
    "mkdocs-redirects==1.2.2",
]

[dependency-groups]
dev = ["pre-commit==4.2.0"]
