[project]
name = "policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-git-revision-date-localized-plugin==1.4.7",
  "mkdocs-glightbox==0.5.1",
  "mkdocs-material[imaging]==9.6.20",
  "mkdocs-minify-plugin==0.8.0",
  "mkdocs-redirects==1.2.2",
]

[dependency-groups]
dev = [
  "basedpyright==1.31.4",
  "linkchecker==10.6.0",
  "pre-commit==4.3.0",
  "ruff==0.13.3",
]
